Fixed keyboard not opening on mobile

--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,6 @@ body {
   line-height: 1.35;
 }
 
-.input-container {
-  display: inline;
-  flex: 1;
-}
-
 .cursor {
   display: inline-block;
   width: 10px;
@@ -58,16 +53,9 @@ body {
   }
 }
 
-.input {
-  background: transparent;
-  border: none;
-  color: #00FF00;
-  font-size: 16px;
-  outline: none;
-}
-
-.input:focus {
-  outline: none;
+.input-container {
+  display: inline;
+  flex: 1;
 }
 
 #input {
